--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
+  <body>
+    <h1>My First Heading</h1>
 
-<h1>My First Heading</h1>
+    <p>My first paragraph.</p>
 
-<p>My first paragraph.</p>
-
-</body>
+    <form action="">
+      <input type="submit" value="Login" />
+    </form>
+  </body>
 </html>
-
